# HydroContestDetection

./: .gitignore  .gitmodules  README.md
BoundingBoxSelection/QuadTreeBoxes/: CMakeLists.txt  main.cpp
HydroTestSuite/: README.md  annotate.m  annotation_to_voc.m  customKMeans.m  drawProposals.m  genProposals.m  getBoundingBoxClusters.m  getWeakPriors.m  iouCentered.m  pixelMean.m  score.m  setHorizons.m  ycrcb_ycrcb.txt
HydroTestSuite/annotations/: 00.JPG.txt  01.JPG.txt  01.JPG_horizon.txt  02.JPG.txt  03.JPG.txt  03.JPG_horizon.txt  04.JPG.txt  05.JPG.txt  05.JPG_horizon.txt  06.JPG.txt  07.JPG.txt  07.JPG_horizon.txt  08.JPG.txt  09.JPG.txt  10.JPG.txt  10.JPG_horizon.txt  100.JPG.txt  101.JPG.txt  102.JPG.txt  103.JPG.txt  104.JPG.txt  105.JPG.txt  106.JPG.txt  107.JPG.txt  108.JPG.txt  109.JPG.txt  11.JPG.txt  11.JPG_horizon.txt  110.JPG.txt  111.JPG.txt  112.JPG.txt  113.JPG.txt  114.JPG.txt  115.JPG.txt  116.JPG.txt  117.JPG.txt  118.JPG.txt  119.JPG.txt  12.JPG.txt  120.JPG.txt  (+156 more)
HydroTestSuite/annotations_cache/: annots.pkl
HydroTestSuite/images/: 00.JPG_horizon.txt  01.JPG_horizon.txt  02.JPG_horizon.txt  03.JPG_horizon.txt  04.JPG_horizon.txt  05.JPG_horizon.txt  07.JPG_horizon.txt  08.JPG_horizon.txt  (+145 more)
SegmentationMethods/: README.md
SegmentationMethods/MST/: CMakeLists.txt  custom_bitset.h  main.cpp
faster_rcnn_pytorch/: FasterRCNN_boat_results  FasterRCNN_results  demo.py  nohup.out  runExperiment.py  test.py  testRCNN.py  testRPN.py  train.py
yolo2-pytorch/: YOLO_boat_results  darknet.py  demo.py  runExperiment.py  test.py  train.py
(+3864 files in other folders)
